[package]
name = "superlightcontrol"
version = "0.1.0"
edition = "2021"
description = "Simple mouse tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
peg = "0.8.1"
winit = "0.28.6"

[package.metadata.bundle]
name = "superlightcontrol"
identifier = "sh.natalie.superlightcontrol"
icon = []
version = "1.0.0"
resources = []
copyright = "gwuh"
category = "Developer Tool"
short_description = "Simple mouse tool"
long_description = """
tool to emulate logi options' button + drag feature on other OSs and mice
"""